--- a/src/css/common.css
+++ b/src/css/common.css
@@ -66,15 +66,7 @@ img {
   padding: 7px;
   border-radius: 7px;
   overflow: hidden;
-  box-shadow: 0 1px 4px rgba(0, 0, 0, 0.3),
-    -23px 0 20px -23px rgba(0, 0, 0, 0.6), 23px 0 20px -23px rgba(0, 0, 0, 0.6),
-    inset 0 0 40px rgba(0, 0, 0, 0.1);
-
-  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.photo-card:hover {
-  transform: scale(1.05);
+  border: 1px solid black;
 }
 
 .gallery img {
